k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: capstone-ns
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None # Headless service for StatefulSet
